FIX: header and title letter spacing

--- a/pages/blog/blogDetails.scss
+++ b/pages/blog/blogDetails.scss
@@ -9,6 +9,7 @@
   .title2 {
     font-size: 40px;
     line-height: 1.2;
+    letter-spacing: -1px;
 
     @include mobile {
       font-size: 30px;
@@ -78,10 +79,9 @@
     color: $theme-secondary;
     text-transform: uppercase;
     width: 100px;
-    height: 45px;
     border-radius: 50px;
     margin-bottom: 30px;
-    padding: 0;
+    padding: 10px 0;
     transition: all 0.5s ease-in-out;
 
     span {
